[package]
name = "iview"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bmp = "0.5.0"
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff"] }
kamadak-exif = "0.5"
rfd = "0.15"
eframe = { version = "0.30.0", features = ["wgpu"] }
arboard = "3.4"
winres = "0.1"
webp = "0.3"
webbrowser = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0" # 2026-os stabil verzió
time-format = "1.2.1"
tiff = "0.9"
png = "0.17"
wgpu = "23.0" # Vagy az eframe által használt verzió
bytemuck = { version = "1.14", features = ["derive"] }
egui = "0.30"
egui-wgpu = "0.30" # <--- Ez kell a Callback típushoz

[build-dependencies]
winres = "0.1"
